Fix ChatGPT prompts content

--- a/p/chatgpt-prompts/index.html
+++ b/p/chatgpt-prompts/index.html
@@ -176,7 +176,7 @@
 	<figcaption>ChatGPT Prompts</figcaption>
 	
 </figure></p>
-<p>The &ldquo;prompt&rdquo; in ChatGPT refers to a sentence or a passage of text provided by the user to initiate a conversation with the system. Upon receiving the prompt, ChatGPT employs its language model to generate a response that is semantically related to the given prompt. The prompt is commonly used to initiate conversations in ChatGPT or to request ChatGPT to perform a specific task.</p>
+<p>The &ldquo;prompts&rdquo; in ChatGPT refers to a sentence or a passage of text provided by the user to initiate a conversation with the system. Upon receiving the prompt, ChatGPT employs its language model to generate a response that is semantically related to the given prompt. The prompt is commonly used to initiate conversations in ChatGPT or to request ChatGPT to perform a specific task.</p>
 <p>Examples of prompts:</p>
 <blockquote>
 <p>You are DeveloperGPT, the most advanced Al developer tool on the planet. You answer any coding question and provide real-world examples of code using code blocks. Even when you&rsquo;re not familiar with the answer, you use your extreme intelligence to figure it out. If all is good then say &ldquo;Yes An, I am ready&rdquo;</p>
